# borato-morphium

./: .gitignore  AGENTS.md  BoratoMorphium.jucer  CLAUDE.md  CMakeLists.txt  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md
.github/workflows/: build-release-artifacts.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
Source/Core/: ExcitationCore.cpp  ExcitationCore.h  MorphiumSound.h  MorphiumVoice.cpp  MorphiumVoice.h  PresetManager.cpp  PresetManager.h
Source/DSP/: BasicMatterProcessor.cpp  BasicMatterProcessor.h  PolyBlep.h  WaveguideResonator.cpp  WaveguideResonator.h  Wavetable.h
Source/Parameters/: ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h
Source/UI/: MorphiumLookAndFeel.cpp  MorphiumLookAndFeel.h
docs/: ROADMAP.md
installer/: BoratoMorphium.iss
tests/: SpectralUtils.cpp  SpectralUtils.h  main.cpp  test_excitation.cpp  test_integration.cpp  test_matter.cpp  test_presets.cpp  test_voice.cpp  test_waveguide.cpp
tests/golden/: glass_cold_room.json  wooden_marimba.json
tools/: layout_audit.py  layout_report.html
